# ComfyUI-TutuBanana

./: Example Workflow.json  README.md  README_EN.md  Tutu.py  TutuNanoBananaPro.py  TutuPromptMasterV3.py  Tutuapi.json  __init__.py  comfyui-node-info.json  pyproject.toml  requirements.txt  template_adapter.py  user_templates.json  user_templates_manager.py
gpt4o-image-prompts-master/gpt4o-image-prompts-master/: .gitignore
gpt4o-image-prompts-master/gpt4o-image-prompts-master/data/: prompts.json
web/css/: tutu_node_spacing.css  tutu_styles.css
web/js/: tutu_template_manager.js
