[project]
name = "ComfyUI-TutuBanana"
description = "A powerful ComfyUI custom node suite for Google Gemini image generation with advanced dual-node architecture and comprehensive template system featuring 333 GPT-4o prompts"
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["aiohttp", "aiohttp-cors", "GitPython", "numpy", "Pillow", "requests", "matrix-client", "transformers", "huggingface-hub", "psutil"]

[project.urls]
Repository = "https://github.com/zhaotututu/ComfyUI-TutuBanana"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zhaotututu"
DisplayName = "ComfyUI-TutuBanana"
Icon = ""
